convert page is ready

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "tempwaste/ConvertPage.tsx", "tempwaste/PredictionPage.tsx"],
+  "include": ["src", "tempwaste/ConvertPage.tsx", "tempwaste/PredictionPage.tsx", "tempwaste/filter.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
 
